@@ -92,6 +92,7 @@ since 1999.  If I missed your name, let me know.
 * Jason Hedden
 * Karl Hegbloom
 * Thomas Hepper
+* Marcus Hildenbrand
 * Arne Hinrichsen
 * Ronald Ho
 * Stanley Hopcroft
