@@ -16,6 +16,7 @@ Nagios 3.x Change Log
 * Fix for writing check result files under Cygwin
 * Fix for not building sample helloworld.o event broker module if event broker is disabled by configure script
 * Fix to sample event handler scripts
+* Fix for handling plugin output with escaped newlines and backslashes
 
 
 3.0rc1 - 12/17/2007
